[gd_scene load_steps=2 format=3 uid="uid://c1h2e3r4o5s6p"]

[ext_resource type="Script" uid="uid://b8356o5y5sdex" path="res://scripts/HeroSprite.gd" id="1_script"]

[node name="HeroSprite" type="CharacterBody2D"]
script = ExtResource("1_script")

[node name="Visuals" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="Visuals"]

[node name="Legs" type="Sprite2D" parent="Visuals"]

[node name="Chest" type="Sprite2D" parent="Visuals"]

[node name="Shoulder" type="Sprite2D" parent="Visuals"]

[node name="Neck" type="Sprite2D" parent="Visuals"]

[node name="Head" type="Sprite2D" parent="Visuals"]

[node name="Weapon" type="Sprite2D" parent="Visuals"]

[node name="Offhand" type="Sprite2D" parent="Visuals"]

[node name="Ring" type="Sprite2D" parent="Visuals"]

[node name="Trinket" type="Sprite2D" parent="Visuals"]

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -100.0
offset_top = -180.0
offset_right = 100.0
offset_bottom = -157.0
text = "Hero Name"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 0
offset_left = -60.0
offset_top = -150.0
offset_right = 60.0
offset_bottom = -140.0
value = 100.0
show_percentage = false

[node name="StatusContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -60.0
offset_top = -130.0
offset_right = 60.0
offset_bottom = -120.0
theme_override_constants/separation = 2
alignment = 1

[node name="CastingBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 0
offset_left = -60.0
offset_top = -160.0
offset_right = 60.0
offset_bottom = -155.0
show_percentage = false
